[gd_scene load_steps=10 format=3 uid="uid://dhawrhg71vr77"]

[ext_resource type="Script" path="res://Scenes and Scripts/pirana.gd" id="1_anoch"]
[ext_resource type="Texture2D" uid="uid://cklc7ttsh7m0n" path="res://Game Assets/pirhana/pirhana.png" id="2_mki04"]
[ext_resource type="AudioStream" uid="uid://dh73yvcw50an4" path="res://sound/tiny-vicious-creature-47253.mp3" id="3_pdycd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uedcs"]
radius = 16.0
height = 64.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5tppm"]
atlas = ExtResource("2_mki04")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omx7t"]
atlas = ExtResource("2_mki04")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_trnm1"]
atlas = ExtResource("2_mki04")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rylvi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tppm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omx7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trnm1")
}],
"loop": true,
"name": &"MoveLeft",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4nyjx"]
radius = 115.017

[node name="Pirana" type="CharacterBody2D" groups=["enemy", "pirana"]]
collision_mask = 0
script = ExtResource("1_anoch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uedcs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9.53674e-07, 9.53674e-07)
scale = Vector2(1.375, 1.375)
sprite_frames = SubResource("SpriteFrames_rylvi")
animation = &"MoveLeft"
frame_progress = 0.850108

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4nyjx")

[node name="LairAttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="Chomp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pdycd")
volume_db = -5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LairAttackCooldown" to="." method="_on_lair_attack_cooldown_timeout"]
